# SpectraRenderer

./: .gitignore  CMakeLists.txt  README.md  VERSION.md
scripts/: progen.bat
src/SpectraBenchmark/: CMakeLists.txt
src/SpectraCore/: CMakeLists.txt
src/SpectraCore/Debug/: SpectraCore.exp
src/SpectraCore/SpectraCore.dir/Debug/: SpectraCore.dll.recipe  SpectraCore.ilk
src/SpectraCore/src/Private/: S_int4.cpp  S_uint4.cpp  SpectraCore.cpp
src/SpectraCore/src/Public/: S_int4.h  S_uint4.h  SpectraCore.h
src/SpectraDX12Backend/: CMakeLists.txt
src/SpectraEditor/: CMakeLists.txt
src/SpectraInstrumentation/: CMakeLists.txt
src/SpectraLauncher/: CMakeLists.txt  benchmark_log.txt  math_log.txt
src/SpectraMaterials/: CMakeLists.txt
src/SpectraRenderEngine/: CMakeLists.txt
src/SpectraRenderPipeline/: CMakeLists.txt
src/SpectraRenderPipeline/Debug/: SpectraRenderPipeline.exp
src/SpectraRenderPipeline/SpectraRenderPipeline.dir/Debug/: SpectraRenderPipeline.dll.recipe  SpectraRenderPipeline.ilk
src/SpectraRenderPipeline/src/Private/: SpectraRenderPipeline.cpp
src/SpectraRenderPipeline/src/Public/: SpectraRenderPipeline.h
src/SpectraUI/: CMakeLists.txt
src/SpectraUI/Debug/: SpectraUI.exp
src/SpectraUI/SpectraEditors/: CMakeLists.txt
src/SpectraUI/SpectraEditors/Debug/: SpectraEditors.exp
src/SpectraUI/SpectraEditors/SpectraEditors.dir/Debug/: SpectraEditors.dll.recipe  SpectraEditors.ilk
src/SpectraUI/SpectraEditors/src/Private/: SpectraEditors.cpp
src/SpectraUI/SpectraEditors/src/Public/: SpectraEditors.h
src/SpectraUI/SpectraImGuiWrapper/: CMakeLists.txt
src/SpectraUI/SpectraImGuiWrapper/Debug/: SpectraImGuiWrapper.exp
src/SpectraUI/SpectraImGuiWrapper/SpectraImGuiWrapper.dir/Debug/: SpectraImGuiWrapper.dll.recipe  SpectraImGuiWrapper.ilk
src/SpectraUI/SpectraImGuiWrapper/src/Private/: SpectraImGuiWrapper.cpp
src/SpectraUI/SpectraImGuiWrapper/src/Public/: SpectraImGuiWrapper.h
src/SpectraUI/SpectraNodes/: CMakeLists.txt
src/SpectraUI/SpectraNodes/Debug/: SpectraNodes.exp
src/SpectraUI/SpectraNodes/SpectraNodes.dir/Debug/: SpectraNodes.dll.recipe  SpectraNodes.ilk
src/SpectraUI/SpectraNodes/src/Private/: SpectraNodes.cpp
src/SpectraUI/SpectraNodes/src/Public/: SpectraNodes.h
src/SpectraUI/SpectraUI.dir/Debug/: SpectraUI.dll.recipe  SpectraUI.ilk
src/SpectraUI/SpectraViewports/: CMakeLists.txt
src/SpectraUI/SpectraViewports/Debug/: SpectraViewports.exp
src/SpectraUI/SpectraViewports/SpectraViewports.dir/Debug/: SpectraViewports.dll.recipe  SpectraViewports.ilk
src/SpectraUI/SpectraViewports/src/Private/: SpectraViewports.cpp
src/SpectraUI/SpectraViewports/src/Public/: SpectraViewports.h
src/SpectraUI/SpectraWidgets/: CMakeLists.txt
src/SpectraUI/SpectraWidgets/Debug/: SpectraWidgets.exp
src/SpectraUI/SpectraWidgets/SpectraWidgets.dir/Debug/: SpectraWidgets.dll.recipe  SpectraWidgets.ilk
src/SpectraUI/SpectraWidgets/src/Private/: SpectraWidgets.cpp
src/SpectraUI/SpectraWidgets/src/Public/: SpectraWidgets.h
src/SpectraUI/src/Private/: SpectraUI.cpp
src/SpectraUI/src/Public/: SpectraUI.h
(+36 files in other folders)
